--- a/aDrumsLib/aDrumsLib.csproj
+++ b/aDrumsLib/aDrumsLib.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Enums.cs" />
     <Compile Include="Factory.cs" />
     <Compile Include="ISerialPort.cs" />
+    <Compile Include="Jack.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerialDevice.cs" />
     <Compile Include="SysExMessage.cs" />
